added endpoints for reports
